--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "styles/variables.scss";
+
 #root {
   margin: 0 auto;
   padding: 0;
@@ -14,6 +16,10 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
+  h1 {
+    color: $color-primary;
+  }
 }
 
 @keyframes appear {
